--- a/packages/en-US/.vitepress/theme/styles/custom.css
+++ b/packages/en-US/.vitepress/theme/styles/custom.css
@@ -1,1 +1,42 @@
+:root {
+  --vp-c-brand: #6988e6;
+  --vp-c-brand-light: #7994e5;
+  --vp-c-brand-lighter: #8aa1e5;
+  --vp-c-brand-dark: #597ce7;
+  --vp-c-brand-darker: #4971e9;
+}
 
+:root {
+  --vp-home-hero-name-color: transparent;
+  --vp-home-hero-name-background: -webkit-linear-gradient(
+    120deg,
+    #bd34fe -80%,
+    #6fd6eb
+  );
+  --vp-home-hero-image-background-image: linear-gradient(
+    -45deg,
+    #bd34fe60 -80%,
+    #6fd6eb60
+  );
+  --vp-home-hero-image-filter: blur(56px);
+}
+
+.VPHero .name {
+  font-size: 36px;
+}
+
+@media (min-width: 640px) {
+  .VPHero .name {
+    font-size: 52px;
+  }
+}
+
+@media (min-width: 960px) {
+  .VPHero .name {
+    font-size: 60px;
+  }
+
+  .VPHero .text {
+    font-size: 52px;
+  }
+}
