--- a/packages/zh-CN/.vitepress/theme/styles/custom.css
+++ b/packages/zh-CN/.vitepress/theme/styles/custom.css
@@ -1,15 +1,16 @@
 :root {
-  --vp-c-brand: #6988e6;
-  --vp-c-brand-light: #7994e5;
-  --vp-c-brand-lighter: #8aa1e5;
-  --vp-c-brand-dark: #597ce7;
-  --vp-c-brand-darker: #4971e9;
-  --vp-c-brand-dimm: rgba(105, 136, 230, 0.1);
+  --vp-c-brand-1: #6988e6;
+  --vp-c-brand-2: #7994e5;
+  --vp-c-brand-3: #8aa1e5;
+  --vp-c-brand-soft: rgba(100, 131, 225, 0.16);
+
+  --vp-button-brand-bg: var(--vp-c-brand-2);
+  --vp-button-brand-hover-bg: var(--vp-c-brand-1)
 }
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
+  --vp-home-hero-name-background: linear-gradient(
     120deg,
     #bd34fe -80%,
     #6fd6eb
@@ -17,22 +18,19 @@
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     #bd34fe60 -80%,
-    #6fd6eb60
+    #6fd6eb80
   );
   --vp-home-hero-image-filter: blur(56px);
 }
 
-
-:root {
-  --vp-custom-block-tip-border: var(--vp-c-brand);
-  --vp-custom-block-tip-text: var(--vp-c-brand-darker);
-  --vp-custom-block-tip-bg: var(--vp-c-brand-dimm);
+.vp-doc a {
+  text-decoration: none;
 }
 
-.dark {
-  --vp-custom-block-tip-border: var(--vp-c-brand);
-  --vp-custom-block-tip-text: var(--vp-c-brand-lighter);
-  --vp-custom-block-tip-bg: var(--vp-c-brand-dimm);
+.vp-doc a:hover {
+  text-decoration-line: underline;
+  text-decoration-thickness: from-font;
+  text-underline-position: from-font;
 }
 
 .VPHero .name {
@@ -51,16 +49,12 @@
   }
 
   .VPHero .text {
-    font-size: 54px;
+    font-size: 52px;
   }
 }
 
-/* .vp-doc .custom-block a {
-  text-decoration: none;
-} */
-
 .ev-dev {
-  background-color: #eee;
+  background-color: #eeeeee;
 }
 
 .dark .ev-dev {
